# organizer

./: Cargo.toml  Design.md  README.md
.github/workflows/: build.yml
config_defaults/: archive_extensions.txt  audio_extensions.txt  code_extensions.txt  delete_patterns.txt  document_extensions.txt  home_markers.txt  media_extensions.txt
src/: actions.rs  categorize.rs  config.rs  dedupe.rs  main.rs  utils.rs
