[package]
name = "organizer"
version = "0.1.0"
edition = "2021"
description = "Rust CLI to organize, deduplicate, and clean large data trees (media, music, documents, code projects, git repos, backups) with dry-run and detailed logging."
license = "MIT"
repository = "https://example.com/your-repo"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0"
blake3 = "1.5"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
globset = "0.4"
ignore = "0.4"
infer = "0.15"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
walkdir = "2.5"
time = { version = "0.3", features = ["macros", "formatting"] }
